--- a/task9/package.json
+++ b/task9/package.json
@@ -6,5 +6,10 @@
     "gulp-sass": "^2.3.2",
     "gulp-sequence": "^0.4.5",
     "gulp-watch": "^4.3.8"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2"
   }
 }
